[package]
name = "perfect-grid"
version = "0.2.4"
authors = ["ushinnary <kartushin.alexander97@gmail.com>"]
description = "WASM Package that calculates images dimensions to fill the grid line by saving aspect ratio of all images."
repository = "https://github.com/ushinnary/perfect-grid-wasm"
license = "MIT"
license-file = "LICENSE.txt"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
